some fix in photo-grid sections

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                 <li class="intro__item"><span class="intro__item intro__item_weight_bold">Аэропортов</span> 241</li>
             </ul>
         </section>
-        <section class="photo__grid">
-            <img src="./images/sprint-3-images/photo-grid-train.jpg" alt="вид из окна поезда на море" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на заснеженные горы " class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-tuman.jpg" alt="в поле собака стоит на стоге сена" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-sochi.jpg" alt="вид сверху на деревья в тумане" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-arisa.jpg" alt="колесо автомобиля, стоящего на прозрачном льду" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-baikal.jpg" alt="море и горы на горизонте" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-elbrus.jpg" alt="горы со снежными пиками" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-kondratiev.jpg" alt="знак Пешеходный переход" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-kamchatka-1.jpg" alt="Вид сверху на горы в тумане" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-kamchatka-2.jpg" alt="Заснеженная Гора" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-baikal-2.jpg" alt="Обрыв скалы" class="photo__grid_item">
-            <img src="./images/sprint-3-images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo__grid_item">
+        <section class="photo-grid">
+            <img src="./images/sprint-3-images/photo-grid-train.jpg" alt="вид из окна поезда на море" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на заснеженные горы " class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-tuman.jpg" alt="в поле собака стоит на стоге сена" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-sochi.jpg" alt="вид сверху на деревья в тумане" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-arisa.jpg" alt="колесо автомобиля, стоящего на прозрачном льду" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-baikal.jpg" alt="море и горы на горизонте" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-elbrus.jpg" alt="горы со снежными пиками" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-kondratiev.jpg" alt="знак Пешеходный переход" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-kamchatka-1.jpg" alt="Вид сверху на горы в тумане" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-kamchatka-2.jpg" alt="Заснеженная Гора" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-baikal-2.jpg" alt="Обрыв скалы" class="photo-grid__item">
+            <img src="./images/sprint-3-images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
         </section>
         <section class="places">
             <article class="places__item">
