some fix in cover section

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             <img src="./images/sprint-3-images/photo-grid-baikal-2.jpg" alt="Обрыв скалы" class="photo-grid__item">
             <img src="./images/sprint-3-images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
         </section>
-        <section class="places">
-            <article class="places__item">
+        <section class="place">
+            <article class="place__item">
                 <h3 class="place__title">Куршская коса</h3>
                 <img src="./images/sprint-3-images/place-kosa.jpg" alt="Корни реликтовых деревьев на отмели" class="place__image">
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a href="#" class="link place__link">park-kosa.ru</a>
                 </div>
                 <div class="place__paragraph">
@@ -82,11 +82,11 @@
                 </div>
             </article> 
         
-        <article class="places__item">
+        <article class="place__item">
             <h3 class="place__title">Кольский</h3>
             <img src="./images/sprint-3-images/place-kolsky.jpg" alt="побережье и заснеженные горы" class="place__image">
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
+                <p class="place__url-heading">url</p>
                 <a href="#" class="link place__link">National Geographic</a>
             </div>
             <div class="place__paragraph">
@@ -101,11 +101,11 @@
             </div>
         </article>
 
-        <article class="places__item">
+        <article class="place__item">
             <h3 class="place__title">Алтай</h3>
             <img src="./images/sprint-3-images/place-altai.jpg" alt="Ноутбук на фоне леса"  class="place__image">
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
+                <p class="place__url-heading">url</p>
                 <a href="https://www.facebook.com/" class="link place__link">Facebook</a>
             </div>
             <div class="place__paragraph">
@@ -118,11 +118,11 @@
                 </p>
             </div>
         </article>
-        <article class="places__item">
+        <article class="place__item">
             <h3 class="place__title">Зимний Байкал</h3>
             <img src="./images/sprint-3-images/place-winter-baikal.jpg" alt="Прозрачный лед" class="place__image">
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
+                <p class="place__url-heading">url</p>
                 <a href="https://vk.com/baikalmile" class="link place__link">https://vk.com/baikalmile</a>
             </div>
             <div class="place__paragraph">
@@ -139,11 +139,11 @@
                 </p>
             </div>
         </article>
-        <article class="places__item">
+        <article class="place__item">
             <h3 class="place__title">Карелия</h3>
             <img src="./images/sprint-3-images/place-karelia.jpg" alt="Озеро, по берегам которого хвойный лес" class="place__image">
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
+                <p class="place__url-heading">url</p>
                 <a href="http://vodlozero.ru/" class="link place__link">http://vodlozero.ru/</a>
             </div>
             <div class="place__paragraph">
