--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
             <h1 class="lead__title">Путешествия по России</h1>
             
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</p>
-                <figure>
-                    <img src="./images/sprint-3-images/lead-polka.jpg" class="lead__image"  alt="">
+                <figure class="lead__item">
+                    <img src="./images/sprint-3-images/lead-polka.jpg" class="lead__image"  alt="Занятая нижняя полка поезда и вид из окна">
                     <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
                 </figure>    
         </section>
         <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-                планируют&nbsp;провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На 
-                самом&nbsp;деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами 
-                Саян&nbsp;и&nbsp;суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без 
+                планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На 
+                самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами 
+                Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без 
                 миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера 
                 Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их 
-                в&nbsp;свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
-                описали&nbsp;некоторые интересные места, достойные вашего отпуска.
+                в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
+                описали некоторые интересные места, достойные вашего отпуска.
                 </p>
             <ul class="intro__list">
                 <li class="intro__item"><span class="intro__item intro__item_weight_bold">Часовых поясов</span> 11</li>
@@ -162,14 +162,14 @@
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala"
             target="_blank"
             class="cover__link">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                 <p class="cover__subtitle">
                     По мотивам учебной темы о Транссибе —&nbsp;путешествие от столицы до Байкала на электричках.
                 </p>
             </a>
         </section>
     </main>
-    <section class="footer">
+    <footer class="footer">
         <nav>
             <ul class="footer__links">
                 <li><a href="https://yandex.ru/maps" class="link footer__link">Карты</a></li>
@@ -180,6 +180,6 @@
             </ul>
         </nav>
         <span class="footer__copyright">&#169; 2022. Тимур</span>
-    </section>
+    </footer>
 </body>
 </html>
